[project]
name = "pycraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cycler==0.11.0",
    "fonttools==4.43.0",
    "getostheme>=2024.0.1",
    "glcontext==2.3.6",
    "gputil==1.4.0",
    "kiwisolver==1.4.4",
    "matplotlib>=3.10.3",
    "moderngl>=5.11.0",
    "moderngl-window>=3.1.1",
    "mouseinfo>=0.1.3",
    "multipledispatch>=1.0.0",
    "numba>=0.61.2",
    "packaging>=25.0",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "py-cpuinfo>=9.0.0",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "pygetwindow>=0.0.9",
    "pyglet>=2.1.6",
    "pyjoystick>=1.2.4",
    "pymsgbox>=1.0.9",
    "pyparsing>=3.2.3",
    "pyperclip>=1.9.0",
    "pyrect>=0.2.0",
    "pyrr>=0.10.3",
    "pyscreeze>=1.0.1",
    "pysdl2>=0.9.17",
    "python-dateutil>=2.9.0.post0",
    "pytweening>=1.2.0",
    "pywavefront>=1.3.3",
    "resource-man>=2.2.8",
    "six>=1.17.0",
    "typeguard==2.13.3",
]
